# synton-lang

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  ECodesynton-langdocsCHANGELOG.md  ECodesynton-langdocsUPDATE_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_CN.md  Makefile  README.md  clippy.toml  justfile  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: commands.rs  main.rs  output.rs  repl.rs
crates/synton-ast/: Cargo.toml
crates/synton-ast/src/: expr.rs  id.rs  lib.rs  op.rs  span.rs  stmt.rs  types.rs
crates/synton-contract/: Cargo.toml
crates/synton-contract/src/: dso.rs  lib.rs  solver.rs
crates/synton-decompiler/: Cargo.toml
crates/synton-decompiler/src/: codegen.rs  lib.rs  python.rs  typescript.rs
crates/synton-lexer/: Cargo.toml
crates/synton-lexer/src/: error.rs  lib.rs
crates/synton-lsp/: Cargo.toml
crates/synton-lsp/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  symbols.rs
crates/synton-parser/: Cargo.toml
crates/synton-parser/src/: ast_builder.rs  error.rs  expr_parser.rs  grammar.rs  lib.rs  stmt_parser.rs
crates/synton-runtime/: Cargo.toml
crates/synton-runtime/src/: bytecode.rs  engine.rs  lib.rs  memory.rs  stack.rs  stdlib.rs
crates/synton-typeck/: Cargo.toml
crates/synton-typeck/src/: env.rs  error.rs  infer.rs  lib.rs
docs/: ARCHITECTURE.md  CODEMAP.md  CONTRIBUTING.md  DEVELOPMENT.md  RUNBOOK.md
runtime-wasm/: Cargo.toml
runtime-wasm/src/: lib.rs
tests/common/: Cargo.toml
