[package]
name = "synton-lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Lexical analyzer for Synton programming language"

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
synton-ast = { path = "../synton-ast" }
