[package]
name = "synton-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for Synton"

[dependencies]
tower-lsp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "io-std"] }
dashmap = "6.0"
rustc-hash = { workspace = true }
synton-ast = { path = "../synton-ast" }
synton-lexer = { path = "../synton-lexer" }
synton-parser = { path = "../synton-parser" }
synton-typeck = { path = "../synton-typeck" }
